# burger.bench

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
burger/: __init__.py
burger/base/: __init__.py  util.py
burger/extra/: __init__.py
burger/extra/mpmath/: __init__.py
burger/extra/mpmath/template/: fdm.py  fvm.py
burger/lang/: __init__.py
burger/lang/c/: __init__.py  code.c
burger/lang/c/template/: fdm.c
burger/lang/cpp/: __init__.py  code.cpp
burger/lang/cpp/template/: fdm.cpp
burger/lang/fortran/: __init__.py  code.f90
burger/lang/fortran/template/: fdm.f90  fvm.f90
burger/lang/go/: __init__.py  code.go
burger/lang/go/template/: fdm.go  fvm.go
burger/lang/julia/: __init__.py  code.jl
burger/lang/julia/template/: fdm.jl  fvm.jl
burger/lang/python/: __init__.py  code.py
burger/lang/python/template/: fdm.py  fvm.py
burger/lang/rust/: __init__.py  code.rs
burger/lang/rust/template/: fdm.rs
burger/language/: __init__.py
burger/language/c/: code.c
burger/language/rust/: code.rs
script/: bench.py  discrepancy.py  error.py  high_reynolds_number.py  plot.py  plot_matplotlib.py  plot_seaborn.py  reynolds.py
script/pde/: __init__.py  __main__.py  core.py  macro.py  scheme.py  type.py
static/data/: bench.7z  bench.json  error.csv  reynolds.7z  reynolds.json
static/data/error/: fdm.csv  fvm.csv
