[project]
name = ""
version = "0.1.0"
description = "Benchmark the Burgers' equation in multiple programming languages"
authors = [
    {name = "Iydon Liang", email = "liangiydon@gmail.com"},
]
license-expression = "GPL-3.0-only"
dependencies = [
    "numpy>=1.22.4",
    "numba>=0.51.2",
    "mpmath>=1.2.1",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/iydon/burger.bench"

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
script = [
    "ipython>=8.4.0",
    "matplotlib>=3.5.2",
    "pandas>=1.4.2",
]
codegen = [
    "sympy>=1.10.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
